# lexicon

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: data-engineer.md  ml-engineer.md  product-engineer.md  qa-engineer.md
.claude/commands/: review.md
.claude/skills/commit/: SKILL.md
alembic/: env.py
alembic/versions/: 0001_init.py  0002_chunks_embedding_nullable.py
app/: __init__.py  cli.py  main.py
app/api/: __init__.py  checklist_service.py  checklists.py  documents.py
app/core/: __init__.py  config.py  db.py  llm.py  logging.py  ratelimit.py  retries.py
app/generation/: CLAUDE.md  __init__.py  graph.py  state.py  warmup.py
app/generation/nodes/: __init__.py  assemble.py  classify_doc_set.py  critique.py  draft_item.py  load_template.py  retrieve_evidence.py  validate_item.py
app/generation/prompts/: __init__.py
app/generation/prompts/v1/: critique.txt  draft_item.txt  pattern_extraction.txt
app/generation/templates/: __init__.py  commercial_contract.py  nda.py  types.py
app/ingestion/: CLAUDE.md  __init__.py  deskew.py  image_to_pdf.py  marker_runner.py  models.py  orchestrator.py  structured_extract.py  trocr_fallback.py
app/learning/: CLAUDE.md  __init__.py  edit_capture.py  few_shot_bank.py  pattern_extractor.py
app/models/: __init__.py  pydantic_models.py  sqlalchemy_models.py
app/observability/: __init__.py
app/retrieval/: __init__.py  chunking.py  embedding.py  hybrid_search.py  indexing.py
docker/: init.sql
docs/: API.md  ARCHITECTURE.md  DATA_FLOW.md  DECISIONS.md  EVALUATION.md  ROADMAP.md  SETUP.md
eval/: __init__.py  loop_eval.py  results_loop.md  run.py
samples/edit_scripts/: add_signatures_subitem.json  rename_counterparty_to_borrower.json  tighten_status_on_confidentiality.json
scripts/: degrade.py
tests/: CLAUDE.md  __init__.py  conftest.py
tests/integration/: test_learning_loop.py  test_pipeline.py
tests/unit/api/: test_upload_returns_real_doc_id.py
tests/unit/generation/: test_classify_doc_set.py  test_prompt_builder.py  test_retrieve_evidence_dedupe.py  test_template_loading.py  test_validate_item_invariants.py  test_warmup.py
tests/unit/ingestion/: test_image_intake.py  test_orchestrator_extraction_unclear.py  test_orchestrator_happy_path.py  test_orchestrator_status.py  test_orchestrator_trocr_fallback.py
tests/unit/learning/: test_critique_gated_on_no_patterns.py  test_edit_event_serialization.py  test_few_shot_retrieve_filters_doc_type.py  test_few_shot_retrieve_skips_identity_pairs.py  test_load_template_applies_template_addition.py  test_pattern_extractor_no_invent.py  test_pattern_extractor_structured_output.py  test_pattern_promotion_threshold.py
tests/unit/retrieval/: test_bulk_update_smoke.py  test_chunking_idempotent.py  test_chunking_no_cross_section.py  test_index_document_promotes_to_indexed.py  test_offset_bisect.py  test_oom_halving.py  test_parent_expansion_budget.py  test_rrf_merge.py  test_search_integration.py  test_section_detection.py
ui/: api_client.py  components.py  streamlit_app.py  theme.py  utils.py
ui/views/: __init__.py  overview.py  patterns.py  viewer.py
