[project]
name = "legal-ai"
version = "0.1.0"
description = "Lexicon — grounded document-checklist generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langfuse>=4.6.1",
    "langgraph>=1.2.0",
    "llama-index-core>=0.14.21",
    "loguru>=0.7.3",
    "marker-pdf>=1.10.2",
    "ollama>=0.6.2",
    "pgvector>=0.4.2",
    "pillow>=10.4.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "sse-starlette>=3.4.4",
    "streamlit>=1.57.0",
    "tenacity>=9.1.4",
    "torch>=2.11.0",
    "transformers>=4.57.6",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "syrupy>=5.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
files = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
